--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -5,6 +5,7 @@
   <repository path="..\FTP\Datastreamr.FtpHomeDirectoryProvider.Test\packages.config" />
   <repository path="..\FTP\FileWatcherService\packages.config" />
   <repository path="..\Ftp\FtpFileWatcherConsoleApp\packages.config" />
+  <repository path="..\Providers\Datastreamr.Provider\packages.config" />
   <repository path="..\Providers\Infotjenester\Infotjenester.Hressurs.Provider\packages.config" />
   <repository path="..\Test\Datastreamr.Framework.Test\packages.config" />
   <repository path="..\Test\Datastreamr.Persistence.Test\packages.config" />
