--- a/Providers/Datastreamr.Provider/Datastreamr.Provider.vbproj
+++ b/Providers/Datastreamr.Provider/Datastreamr.Provider.vbproj
@@ -47,6 +47,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\LazyFramework.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>..\..\packages\Newtonsoft.Json.4.5.11\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -65,8 +69,14 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataStreams\FtpFileStream.vb" />
+    <Compile Include="DataStreams\FixedPositionFileStream.vb" />
+    <Compile Include="DataStreams\FixedPositionFileStreamParams.vb" />
+    <Compile Include="DataStreams\FlatFileStream.vb" />
+    <Compile Include="DataStreams\FlatFileStreamParams.vb" />
+    <Compile Include="DataStreams\BaseFileStream.vb" />
     <Compile Include="DataStreams\FtpFileStreamParams.vb" />
+    <Compile Include="DataStreams\ValueSeparatedFileStream.vb" />
+    <Compile Include="DataStreams\ValueSeparatedFileStreamParams.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -101,6 +111,7 @@
       <CustomToolNamespace>My</CustomToolNamespace>
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Framework\Datastreamr.Framework\Datastreamr.Framework.vbproj">
