--- a/Test/Datastreamr.Framework.Test/Datastreamr.Framework.Test.vbproj
+++ b/Test/Datastreamr.Framework.Test/Datastreamr.Framework.Test.vbproj
@@ -92,7 +92,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DatastreamrContextTest.vb" />
-    <Compile Include="FileStreamTest.vb" />
+    <Compile Include="ValueSeparatedFileStreamTest.vb" />
     <Compile Include="JobExecutorTest.vb" />
     <Compile Include="JobTest.vb" />
     <Compile Include="MapInfoTest.vb" />
